--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "guia-backend",
+  "name": "guia-frontend",
   "version": "1.0.0",
-  "description": "Backend API para Guia Extrema",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
+    "axios": "^1.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "vite": "^5.0.0"
   }
 }
